<?xml version="1.0" encoding="utf-8"?>   
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/enable_sensors_done" android:id="@+id/enable_sensors_done"/>

    <CheckBox
        android:id="@+id/checkBoxAccelerometer"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:text="@string/configure_accelerometer" />

    <CheckBox
        android:id="@+id/checkBoxGyroscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configure_gyroscope" />
    
    <CheckBox
        android:id="@+id/checkBoxMagnetometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configure_magnetometer" />
        
    <CheckBox
        android:id="@+id/checkBoxBridgeAmplifier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/configure_bridge_amplifier" />
    
	<CheckBox
        android:id="@+id/checkBoxExpBoardA0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/configure_expboarda0" />
        
    <CheckBox
        android:id="@+id/checkBoxExpBoardA7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/configure_expboarda7" />
    
    <CheckBox
        android:id="@+id/checkBoxECG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configure_ecg" />
     
    <CheckBox
        android:id="@+id/checkBoxEMG"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/configure_emg" />
    
    <CheckBox
        android:id="@+id/checkBoxHeartRate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/configure_heart_rate" />
    
     <CheckBox
        android:id="@+id/checkBoxGSR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/configure_gsr" />
    
     <CheckBox
        android:id="@+id/checkBoxBatt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/configure_battery" />
</LinearLayout>
</ScrollView>